More spacing changes.

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Ste & Jax Wedding</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <title>Ste & Jax Wedding Reception 2022</title>
+
+    <link rel="canonical" href="https:/pammenter.wedding" />
+    <meta
+      name="description"
+      content="Jax and Ste got married - it's time to celebrate."
+    />
+    <meta itemprop="name" content="Ste & Jax Wedding Celebration 2022" />
+    <meta
+      itemprop="description"
+      content="Jax and Ste got married - it's time to celebrate."
+    />
+    <!-- <meta itemprop="image" content=""> -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:creator" content="@svenpam" />
+    <meta name="twitter:title" content="Ste & Jax Wedding Celebration" />
+    <meta
+      name="twitter:description"
+      content="Jax and Ste got married - it's time to celebrate."
+    />
+    <!-- <meta name="twitter:image:src" content=""> -->
+    <meta
+      property="og:title"
+      content="Jax and Ste got married - it's time to celebrate."
+    />
+    <meta property="og:url" content="https:/pammenter.wedding" />
+    <!-- <meta property="og:image" content="" /> -->
+    <meta
+      property="og:description"
+      content="Jax and Ste got married - it's time to celebrate."
+    />
+    <meta property="og:site_name" content="Ste & Jax Wedding" />
+    <meta property="og:type" content="website" />
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "SocialEvent",
+        "name": "Ste and Jax Wedding Reception",
+        "url": "https:/pammenter.wedding"
+      }
+    </script>
   </head>
   <body>
     <div id="app"></div>
