Updates to content and favicon

--- a/public/index.html
+++ b/public/index.html
@@ -39,6 +39,14 @@
     <meta property="og:site_name" content="Ste & Jax Wedding" />
     <meta property="og:type" content="website" />
 
+    <link rel="apple-touch-icon" sizes="120x120" src="@/assets/img/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" src="@/assets/img/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" src="@/assets/img/favicon-16x16.png" />
+    <link rel="manifest" src="@/assets/img/site.webmanifest" />
+    <link rel="mask-icon" src="@/assets/img/safari-pinned-tab.svg" color="#465741" />
+    <meta name="msapplication-TileColor" content="#465741" />
+    <meta name="theme-color" content="#ffffff" />
+
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
