--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#465741" />
+    <meta name="msapplication-TileColor" content="#465741" />
+    <meta name="theme-color" content="#ffffff" />
     <title>Ste & Jax Wedding Reception 2022</title>
 
     <link rel="canonical" href="https:/pammenter.wedding" />
@@ -38,12 +45,6 @@
     />
     <meta property="og:site_name" content="Ste & Jax Wedding" />
     <meta property="og:type" content="website" />
-
-    <link rel="apple-touch-icon" sizes="120x120" src="@/assets/img/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" src="@/assets/img/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" src="@/assets/img/favicon-16x16.png" />
-    <link rel="manifest" src="@/assets/img/site.webmanifest" />
-    <link rel="mask-icon" src="@/assets/img/safari-pinned-tab.svg" color="#465741" />
     <meta name="msapplication-TileColor" content="#465741" />
     <meta name="theme-color" content="#ffffff" />
 
