--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       itemprop="description"
       content="Jax and Ste got married - it's time to celebrate."
     />
-    <meta itemprop="image" content="https:/pammenter.wedding/img/SoicalCover.png">
+    <meta itemprop="image" content="https:/pammenter.wedding/img/SocialCover.png">
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:creator" content="@svenpam" />
     <meta name="twitter:title" content="Ste & Jax Wedding Celebration" />
@@ -32,13 +32,13 @@
       name="twitter:description"
       content="Jax and Ste got married - it's time to celebrate."
     />
-    <meta name="twitter:image:src" content="https:/pammenter.wedding/img/SoicalCover.png">
+    <meta name="twitter:image:src" content="https:/pammenter.wedding/img/SocialCover.png">
     <meta
       property="og:title"
       content="Jax and Ste got married - it's time to celebrate."
     />
     <meta property="og:url" content="https:/pammenter.wedding" />
-    <meta property="og:image" content="https:/pammenter.wedding/img/SoicalCover.png" />
+    <meta property="og:image" content="https:/pammenter.wedding/img/SocialCover.png" />
     <meta
       property="og:description"
       content="Jax and Ste got married - it's time to celebrate."
