--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     <meta name="twitter:image:src" content="https://pammenter.wedding/img/SocialCover.png">
     <meta
       property="og:title"
-      content="Jax and Ste got married - it's time to celebrate."
+      content="Ste & Jax Wedding Celebration 2022"
     />
     <meta property="og:url" content="https:/pammenter.wedding" />
     <meta property="og:image" content="https://pammenter.wedding/img/SocialCover.png" />
