--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#ffffff" />
     <title>Ste & Jax Wedding Celebration 2022</title>
 
-    <link rel="canonical" href="https:/pammenter.wedding" />
+    <link rel="canonical" href="https://pammenter.wedding" />
     <meta
       name="description"
       content="Jax and Ste got married - it's time to celebrate."
